--- a/index.html
+++ b/index.html
@@ -88,36 +88,74 @@
       .tablo-kapsayici {width: 100vw; max-width: 100vw; overflow-x: auto;}
     }
   
-.tablo-kapsayici {
-  overflow-x: auto;
-  width: 100%;
-}
+@media (max-width: 768px) {
+  html, body {
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+    width: 100%;
+  }
 
-table {
-  white-space: nowrap;
-}
+  .tablo-kapsayici {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
 
-.admin-btn, .sil-btn {
-  font-size: 12px !important;
-  padding: 4px 6px !important;
-  min-width: 80px;
-}
-
-@media (max-width: 600px) {
-  td button {
-    display: block;
+  table {
     width: 100% !important;
-    margin-bottom: 4px;
+    display: block;
+    overflow-x: auto;
+    font-size: 14px;
+    white-space: nowrap;
   }
+
   th, td {
-    font-size: 12px !important;
-    padding: 6px 4px !important;
+    font-size: 13px !important;
+    padding: 6px 8px !important;
   }
+
   input, textarea, button {
     font-size: 14px !important;
     padding: 8px !important;
   }
+
+  h2, h3 {
+    font-size: 18px !important;
+  }
+
+  .admin-btn, .sil-btn {
+    font-size: 13px !important;
+    padding: 5px 8px !important;
+  }
 }
+
+@media (max-width: 700px) {
+  .tablo-kapsayici {
+    overflow-x: auto;
+    width: 100%;
+  }
+  table {
+    width: 100%;
+    display: block;
+    overflow-x: auto;
+  }
+  th, td {
+    font-size: 13px;
+    padding: 6px 4px;
+    white-space: normal;
+  }
+  td button {
+    display: block;
+    width: 100%;
+    margin-bottom: 6px;
+  }
+  .admin-btn, .sil-btn {
+    font-size: 13px;
+    padding: 6px;
+    min-width: auto;
+  }
+}
+
 </style>
 </head>
 <body>
